{improvement} - 카테고리 맛별 제거 \n #234
